@@ -1,3 +1,11 @@
-Dist-Zilla-Plugin-ModuleInstall*
-.build
-tmp
+/.build
+/tmp/
+/Dist-Zilla-Plugin-ModuleInstall-*
+/MYMETA.json
+/MYMETA.yml
+/META.json
+/META.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
