@@ -31,11 +31,11 @@ it in the dist selectively.
 
 # AUTHOR
 
-Kent Fredric <kentnl@cpan.org>
+Kent Fredric &lt;kentnl@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2014 by Kent Fredric <kentfredric@gmail.com>.
+This software is copyright (c) 2016 by Kent Fredric &lt;kentfredric@gmail.com>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
