@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001001
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 1.001000 2014-09-04T20:16:02Z
  [Changed / test recommends]
@@ -36,4 +45,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.01054020 2011-04-04T15:36:00Z
 
 0.01029216 2010-08-04T11:37:06Z
-
